<resources>
	<string name="app_name">ACKWallPaper</string>
	<string name="app_description">Image</string>

	<string name="action_settings">Settings</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Preference Titles -->
	<string name="setting_network_header">Network</string>
	<string name="setting_caching_header">Caching</string>

	<!-- Messages Preferences -->

	<!-- Sync Preferences -->
	<string name="ram_cache_title">Use RAM Cache for Images</string>
	<string name="disk_cache_attachment">Use Storage Cache</string>
	<string name="disk_cache_summary_on">Disk cache enabled</string>
	<string name="disk_cache_summary_off">Disk cache disabled</string>

	<string name="menu_favorite">Favorite</string>
	<string name="menu_history">History</string>
	<string name="menu_settings">Settings</string>

	<string name="cannot_open_database">Bad</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="nav_header_title">KonaChan</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>

	<string name="search_hint">cat</string>
	<string name="title_search">search</string>
	<string name="image_desc">image_desc</string>
	<string name="path_search" />

	<string name="favorites">Favorites</string>
	<string name="add_favr">Added to Favorites</string>
	<string name="remove_favr">Removed from Favorites</string>
	<string name="no_favorites_items">No Favorites</string>
	<string name="no_favorites_msg">Long press on item to add to favorites.</string>
	<string name="favorites_remove_msg">Long press on item to remove from favorites.</string>
	<string name="tooltip_action_bookmark">Set image as a local favorite</string>
	<string name="ram_disk_summary_on">RAM cache for images is enabled.</string>
	<string name="ram_disk_summary_off">RAM cache for images is disabled.</string>
	<string name="settings_description">hello world</string>
	<string name="search_label">cat</string>
	<string name="download_image">Image Saved to local storage.</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_user_saving">MainActivity</string>
	<string name="title_favorite">Favorites</string>
	<string name="title_history">History</string>
	<string name="title_notifications">Notifications</string>
	<string name="refresh">Refresh</string>
	<string name="action_wikipage">wiki</string>
	<string name="action_tagpage">tag page</string>
	<string name="action_wikipage_tooltip">info</string>
	<string name="action_wikipage_condensed">Wiki</string>
	<string name="action_saveuser_title">SaveUser</string>
	<string name="parent_post">Parent Post</string>
	<string name="set_as_wallpaper">Set as Wallpaper</string>
	<string name="text_error_create_http_cache">Could not create HTTP cache</string>
	<string name="bookmark">bookmark</string>
	<string name="download">Download</string>
	<string name="information">Information</string>
	<!-- Preference keys.   -->
	<string name="key_save_history">save_history</string>
	<string name="key_use_cache">UseCache</string>
	<string name="progressbar_desc">display process</string>
	<string name="image_favorite_icon_desc">favorite</string>
	<string name="search">Search</string>
	<string name="wiki_page">Wiki Page</string>
	<string name="network_lost">Network Lost</string>
	<string name="action_download">Download</string>
	<string name="action_favorite">Set Favorite</string>
	<string name="disk_size_text_title">Disk Storage Limit</string>
	<string name="disk_size_dialog_text">Disk Storage Limit</string>
	<string name="menu_context_wiki_page">Wiki Page</string>
</resources>
