<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="org.linuxsenpai.konachan.activity.MainActivity">

	<item
		android:id="@+id/action_searchview"
		android:icon="@drawable/ic_search_black_24dp"
		android:orderInCategory="0"
		android:title="@string/title_search"
		app:actionViewClass="android.widget.SearchView"
		app:showAsAction="always" />

	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/action_settings"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_wikipage"
		android:orderInCategory="3"
		android:title="@string/action_wikipage"
		android:titleCondensed="@string/action_wikipage_condensed"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_tagpage"
		android:orderInCategory="4"
		android:title="@string/action_tagpage"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_refresh"
		android:orderInCategory="1"
		android:title="@string/refresh"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_saveuser"
		android:orderInCategory="2"
		android:title="@string/action_saveuser_title"
		app:showAsAction="never" />


</menu>
