<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_bookmark"
		android:icon="@drawable/favorite_icon"
		android:orderInCategory="1"
		android:title="@string/bookmark"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/action_download"
		android:icon="@drawable/download_icon"
		android:orderInCategory="2"
		android:title="@string/download"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/action_information"
		android:icon="@drawable/information_icon"
		android:orderInCategory="3"
		android:title="@string/information"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_wallpaper"
		android:orderInCategory="100"
		android:title="@string/set_as_wallpaper"
		app:showAsAction="never" />

</menu>
