<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="4dp"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/item_image_view_image"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/image_desc"
		android:scaleType="centerCrop"
		android:transitionName="profile"
		android:visibility="visible"
		app:layout_constraintDimensionRatio="@string/header_image_ratio"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ProgressBar
		android:id="@+id/item_image_view_processbar"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/progressbar_desc"
		android:max="100"
		android:progress="0"
		android:visibility="gone" />

	<ImageView
		android:id="@+id/item_image_view_favorite_icon"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:background="#00FFFFFF"
		android:contentDescription="@string/image_favorite_icon_desc"
		android:src="@drawable/favorite_icon"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="@id/item_image_view_image"
		app:layout_constraintDimensionRatio="@string/header_image_ratio"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.94"
		app:layout_constraintStart_toStartOf="@id/item_image_view_image"
		app:layout_constraintTop_toTopOf="@id/item_image_view_image"
		app:layout_constraintVertical_bias="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>
